--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "eslint": "^7.32.0",
     "eslint-config-athom": "^3.0.1",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "homey-rfdriver": "^3.2.5"
   }
 }
